--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,15 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.21.1
-yarn_mappings=1.21.1+build.3
+minecraft_version=1.20.4
+yarn_mappings=1.20.4+build.3
 loader_version=0.16.5
 # Mod Properties
-mod_version=0.0.4
+mod_version=0.0.4-1204
 maven_group=me.wyndev
 archives_base_name=dragonhelper
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.105.0+1.21.1
+fabric_version=0.97.2+1.20.4
 cloth_config2_version=13.0.138
 modmenu_version=9.2.0-beta.2
